--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,9 @@
-<form action="/users" method="POST" accept-charset="UTF-8">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <label for="username">Name:</label>
-  <input type="text" id="username" name="user[username]"><br><br>
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="user[email]"><br><br>
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="user[password]"><br><br>
-  <input type="submit" value="Submit">
-</form>
+<%= form_with(url: "/users", method: "post") do |form| %>
+    <%= label_tag(:username, "Name:") %>
+    <%= form.text_field :username %>
+     <%= label_tag(:email, "Email:") %>
+      <%= form.email_field :email %>
+       <%= label_tag(:password, "Password:") %>
+        <%= form.password_field :password %>
+    <%= submit_tag("Submit") %>
+  <% end %>
