--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
 
 <h1>Edit user</h1>
 <br>
-<%= form_for(@user, html: {multipart: true}) do |f| %>
+<%= form_for @user, :validate => true do |f| %>
 <ul>
   <% @user.errors.full_messages.each do |error| %>
     <li><%= error %></li>
