--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
 <%end%>
 <br>
 
-<%= form_for(@user, remote: true) do |f| %>
+<%= form_for @user, :validate => true do |f| %>
   username: <%= f.text_field :username, :placeholder =>  'Your user name here' %>
   email : <%= f.email_field :email, :placeholder =>  'user@domain.com' %>
   password : <%= f.password_field :password %>
