--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,10 @@
-<h1>Edit user</h1>
-<br>
-<%= render "form" %>
-
+	<!--main-section-->
+		<main class="main-container center">
+			<!-- sign up form-->
+			<section class="signup-form">
+				<div class="title center">
+					<span>Edit account </span>
+				</div>
+        <%= render "form" %>
+			</section>
+		</main>
