--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,10 @@
-<h1>Create a new user</h1>
-<br>
-<%= render "form" %>
-
+	<!--main-section-->
+		<main class="main-container center">
+			<!-- sign up form-->
+			<section class="signup-form">
+				<div class="title center">
+					<span>Create an new account </span>
+				</div>
+        <%= render "form" %>
+			</section>
+		</main>
